# SpeakeasyGPT_Server

./: .gcloudignore  .gitignore  .replit  .safety-project.ini  Dockerfile  Pipfile  README.md  app.yaml  call_api_stream.py  cleandbs.sh  common_env.sh  env_params.py  ingest.py  ingest.sh  pyproject.toml  replit.nix  requirements.txt  runserver.sh  serve.py  sql.db
.github/workflows/: pylint.yml
api/: pydantic.py  schemas.py
auth/: auth.py  dummy.py  firebase.py
db_docs/: chroma-collections.parquet  chroma-embeddings.parquet
db_docs/index/: id_to_uuid_3fc7b655-90f4-4e40-88ef-d5b9748ce275.pkl  index_metadata_3fc7b655-90f4-4e40-88ef-d5b9748ce275.pkl  uuid_to_id_3fc7b655-90f4-4e40-88ef-d5b9748ce275.pkl
db_images/: chroma-collections.parquet  chroma-embeddings.parquet
db_images/index/: id_to_uuid_d2bc95d7-252f-40eb-a199-e7d94a90f9aa.pkl  index_metadata_d2bc95d7-252f-40eb-a199-e7d94a90f9aa.pkl  uuid_to_id_d2bc95d7-252f-40eb-a199-e7d94a90f9aa.pkl
orm/: models.py
routes/: serve_experimental.py  serve_includes.py
scripts/: common_env.sh  ingest.sh  listtodos.sh  runserver.sh
speakeasy/: customagents.py  customloaders.py  indexes.py  llmfactory.py  nutrition_content.py  quiz_content.py
speakeasy/orm/: models.py
speakeasy/tools/: custom_tools.py  image_tools.py  vectorstore_tools.py
sql/: init_sqlite.py  sql_snippets.py
tests/: env_params_tests.py  llmfactory_tests.py
