
[project]
name = "speakeasygpt-server"
version = "0.2.0"
description = "SpeakeasyGPT Server"
authors = [
    {name = "Max Svarts", email = "maxims33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "bitsandbytes>=0.35.4",
    "clickhouse-connect~=0.5.22", # Downgrade to fix warrning
    "cython>=0.29.34",
    "flask>=3.1.1",
    "flask-cors>=4.0.2",
    "google-cloud-texttospeech>=2.16.3",
    "google-cloud-speech>=2.26.0",
    "huggingface-hub>=0.19.3",
    "langchain==0.3.*",
    "langchain-community==0.3.*",
    "langchain-google-genai==2.*",
    "langchain-google-vertexai==2.*",
    "langchain-chroma>=0.2.5",
    "langchain-huggingface>=0.3.1",
    "marshmallow>=3.20.1",
    "marshmallow-enum>=1.5.1",
    "openai>=1.55.1",
    "pdfminer.six==20221105",
    #"pillow>=11.3.0", # Can this be removed?
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pytorch-lightning>=2.5.2",
    "transformers>=4.55.0",
    "unstructured~=0.6.11", # Made specific (vulnerable?)
    "tabulate>=0.9.0", # Required for unstructured (pdfs)
    "clip-interrogator~=0.5.4", # Made specific
    "accelerate>=0.18.0",
    "sentence-transformers>=4.1.0",
    "chromadb>=0.4.6",
    "pydantic~=2.9.0",
    "langdetect>=1.0.9",
    "sqlalchemy>=2.0.21",
    "pdf2image>=1.17.0",
    "requests>=2.32.4",
    "firebase-admin>=6.6.0",
    "gunicorn>=23.0.0",
    # Security patching - Potentially can remove these now
    #"starlette>=0.47.2",
    #"nltk>=3.9",
    #"aiohttp>=3.12.15",
    #"setuptools>=80.9.0",
    #"werkzeug>=3.1.3",
]

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.hatch.build.targets.wheel]
packages = ["speakeasy", "api", "auth", "routes", "sql", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "safety>=3.6.0",
]
